# Base

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: g3log.cmake  imgui.cmake  minhook.cmake
src/: Hooking.cpp  Hooking.hpp  Pointers.cpp  Pointers.hpp  Singleton.hpp  common.cpp  common.hpp  main.cpp
src/FileMgr/: BaseExplorerItem.cpp  BaseExplorerItem.hpp  File.cpp  File.hpp  FileMgr.cpp  FileMgr.hpp  Folder.cpp  Folder.hpp
src/GUI/: GUI.cpp  GUI.hpp
src/GUI/Menu/: Menu.cpp  Menu.hpp
src/Hooking/: DetourHook.cpp  DetourHook.hpp  IATHook.cpp  IATHook.hpp  IHook.hpp  VMTHook.cpp  VMTHook.hpp
src/Hooks/: Hooks.hpp
src/Hooks/Kernel32/: IsDebuggerPresent.cpp
src/Hooks/SwapChain/: Present.cpp  ResizeBuffers.cpp
src/Hooks/Window/: WndProc.cpp
src/Logger/: LogColor.hpp  LogSink.cpp  LogSink.hpp  Logger.cpp  Logger.hpp
src/Memory/: AddressHelper.cpp  AddressHelper.hpp  Module.cpp  Module.hpp  ModuleMgr.cpp  ModuleMgr.hpp  Pattern.cpp  Pattern.hpp  PatternScanner.cpp  PatternScanner.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Util/: Hash.cpp  Hash.hpp  Joaat.cpp  Joaat.hpp  MinHook.hpp  MinHookKeepAlive.hpp  fnv1a.hpp
